align h3 correctly on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -345,6 +345,10 @@ footer {
 -------------------------------------------------------------------------------*/
 
 @media screen and (max-width: $screen-sm) {
+
+    h3 {
+        margin-left: -15px;
+    }
     
     #first_middle, #last_suffix {
         input:first-of-type {
